--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,6 @@ repositories {
     google {
         content { excludeGroupByRegex "fi\\.vm\\.yti.*" }
     }
-    jcenter {
-        content { excludeGroupByRegex "fi\\.vm\\.yti.*" }
-    }
 
     // put your artifactory parameters to $HOME/.gradle/gradle.properties
     if (project.hasProperty("artifactoryUrl")) {
@@ -67,18 +64,21 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 dependencies {
-    implementation "org.springframework:spring-webflux:6.1.5"
-    implementation "org.springframework:spring-webmvc:6.1.5"
-    implementation "org.springframework:spring-context:6.1.5"
-    implementation "org.springframework.security:spring-security-core:6.2.3"
+    implementation "org.springframework:spring-webflux:6.1.21"
+    implementation "org.springframework:spring-webmvc:6.1.21"
+    implementation "org.springframework:spring-context:6.1.21"
+    implementation "org.springframework.security:spring-security-core:6.5.6"
     implementation "org.springframework.boot:spring-boot-starter-validation:3.2.5"
-    implementation "io.projectreactor.netty:reactor-netty-http:1.1.15"
-    implementation "org.apache.jena:jena-core:4.10.0"
-    implementation "org.apache.jena:jena-arq:4.10.0"
-    implementation "org.apache.jena:jena-rdfconnection:4.10.0"
-    implementation "org.apache.jena:jena-querybuilder:4.10.0"
+    implementation "io.projectreactor.netty:reactor-netty-http:1.3.0"
+    implementation "org.apache.jena:jena-core:5.6.0"
+    implementation "org.apache.jena:jena-arq:5.6.0"
+    implementation "org.apache.jena:jena-rdfconnection:5.6.0"
+    implementation "org.apache.jena:jena-querybuilder:5.6.0"
     implementation "jakarta.validation:jakarta.validation-api:3.0.2"
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation "com.fasterxml.jackson.core:jackson-core:2.20.1"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.20.1"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.20"
 
     implementation "org.opensearch.client:opensearch-java:2.9.1"
     implementation "org.opensearch.client:opensearch-rest-client:2.12.0"
@@ -92,7 +92,7 @@ dependencies {
     testImplementation platform("org.junit:junit-bom:5.9.1")
     testImplementation "org.junit.jupiter:junit-jupiter"
     testImplementation "org.mockito:mockito-core:4.8.0"
-    testImplementation "org.springframework.boot:spring-boot-starter-test:3.2.4"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:3.3.13"
 }
 
 test {
